# jkyk

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  justfile  pyproject.toml
c/: morton.c  run.sh  simple.c  simple2.c  simple3.c  simple_par.c  tiling_mpp_par.c  tiling_mpp_par2.c  tiling_ppp_fast.c
examples/: morton.rs  optimized_tiling_mpp_par.rs  simple.rs  simple2.rs  tiling.rs  tiling2.rs  tiling_mmm.rs  tiling_mmm_fast.rs  tiling_mpp.rs  tiling_mpp_fast.rs  tiling_mpp_par.rs  tiling_mpp_par2.rs  tiling_ppp.rs  tiling_ppp_fast.rs
nbs/: morton.ipynb  tilingvisualization.ipynb  visualize.ipynb
python/jkyk/: __init__.py  morton.py
python/tests/: test_all.py
src/: lib.rs
zig/: tiling.zig
