[package]
name = "jkyk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jkyk"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
pyo3 = "0.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false