[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "jkyk"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "matplotlib>=3.7.5",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "maturin>=1.8.6",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
